test/classes/generic/badFieldExprs/bad-type-expr.value.good
bad-type-expr.chpl:14: error: error while resolving type 'BadValue'
bad-type-expr.chpl:15: note: type expression of field 'x' resolves to a value, not a type
